# tracing-honeycomb

./: .gitignore  Cargo.toml  LICENSE  README.md  aliases.js  search-index.js  settings.html  source-files.js
.circleci/: config.yml
.github/: ci.yml
addr2line/: struct.Context.html  struct.Frame.html  struct.FrameIter.html  struct.FunctionName.html  struct.Location.html
ansi_term/: all.html  enum.Color.html  enum.Colour.html  fn.ANSIByteStrings.html  fn.ANSIStrings.html  fn.sub_string.html  fn.unstyle.html  fn.unstyled_len.html  index.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Infix.html  struct.Prefix.html  struct.Style.html  struct.Suffix.html  type.ANSIByteString.html  type.ANSIByteStrings.html  type.ANSIString.html  type.ANSIStrings.html
backtrace/: struct.BacktraceFmt.html  struct.BacktraceFrameFmt.html
base64/: all.html  constant.BCRYPT.html  constant.BINHEX.html  constant.CRYPT.html  constant.IMAP_MUTF7.html  constant.STANDARD.html  constant.STANDARD_NO_PAD.html  constant.URL_SAFE.html  constant.URL_SAFE_NO_PAD.html  enum.CharacterSet.html  enum.DecodeError.html  fn.decode.html  fn.decode_config.html  fn.decode_config_buf.html  fn.decode_config_slice.html  fn.encode.html  fn.encode_config.html  fn.encode_config_buf.html  fn.encode_config_slice.html  index.html  struct.Config.html
bytes/: all.html  enum.BigEndian.html  enum.LittleEndian.html  struct.Bytes.html  struct.BytesMut.html  trait.Buf.html  trait.BufMut.html  trait.ByteOrder.html
cfg_if/: macro.cfg_if.html
chrono/: all.html  constant.MAX_DATE.html  constant.MIN_DATE.html  enum.Month.html  enum.SecondsFormat.html  enum.Weekday.html  index.html  struct.Date.html  struct.DateTime.html  struct.Duration.html  struct.ParseWeekdayError.html  trait.Datelike.html  trait.Timelike.html
cookie/: all.html  enum.ParseError.html  enum.SameSite.html  index.html  struct.Cookie.html  struct.CookieBuilder.html  struct.CookieJar.html  struct.Delta.html  struct.EncodedCookie.html  struct.Iter.html
cookie_store/: all.html  enum.CookieError.html  index.html  struct.Cookie.html  struct.CookieStore.html  struct.IdnaErrors.html  type.CookieResult.html  type.Result.html
crossbeam_channel/: all.html  enum.RecvTimeoutError.html  enum.SendTimeoutError.html  enum.TryRecvError.html  enum.TrySendError.html  fn.after.html  fn.at.html  fn.bounded.html  fn.never.html  fn.tick.html  fn.unbounded.html  index.html  macro.select.html  struct.IntoIter.html  struct.Iter.html  struct.ReadyTimeoutError.html  struct.Receiver.html  struct.RecvError.html  struct.Select.html  struct.SelectTimeoutError.html  struct.SelectedOperation.html  struct.SendError.html  struct.Sender.html  struct.TryIter.html  struct.TryReadyError.html  struct.TrySelectError.html
crossbeam_deque/: all.html  enum.Steal.html  index.html  struct.Injector.html  struct.Stealer.html  struct.Worker.html
crossbeam_epoch/: all.html  fn.unprotected.html  struct.Atomic.html  struct.Collector.html  struct.CompareAndSetError.html  struct.Guard.html  struct.LocalHandle.html  struct.Owned.html  struct.Shared.html
crossbeam_queue/: all.html  index.html  struct.ArrayQueue.html  struct.PopError.html  struct.PushError.html  struct.SegQueue.html
crossbeam_utils/: all.html  index.html  struct.Backoff.html  struct.CachePadded.html
dist-tracing/: Cargo.toml
dist-tracing/src/: lib.rs  telemetry.rs  telemetry_layer.rs  trace.rs
dist_tracing/: all.html  index.html  sidebar-items.js  struct.BlackholeTelemetry.html  struct.Event.html  struct.Span.html  struct.SpanId.html  struct.TelemetryLayer.html  struct.TraceCtx.html  struct.TraceId.html  trait.Telemetry.html
dtoa/: all.html  trait.Floating.html
either/: all.html  enum.Either.html  macro.try_left.html  macro.try_right.html
encoding_rs/: all.html  enum.CoderResult.html  enum.DecoderResult.html  enum.EncoderResult.html  index.html  static.BIG5.html  static.BIG5_INIT.html  static.EUC_JP.html  static.EUC_JP_INIT.html  static.EUC_KR.html  static.EUC_KR_INIT.html  static.GB18030.html  static.GB18030_INIT.html  static.GBK.html  static.GBK_INIT.html  static.IBM866.html  static.IBM866_INIT.html  static.ISO_2022_JP.html  static.ISO_2022_JP_INIT.html  static.ISO_8859_10.html  static.ISO_8859_10_INIT.html  static.ISO_8859_13.html  static.ISO_8859_13_INIT.html  static.ISO_8859_14.html  static.ISO_8859_14_INIT.html  static.ISO_8859_15.html  static.ISO_8859_15_INIT.html  static.ISO_8859_16.html  static.ISO_8859_16_INIT.html  static.ISO_8859_2.html  static.ISO_8859_2_INIT.html  static.ISO_8859_3.html  static.ISO_8859_3_INIT.html  static.ISO_8859_4.html  static.ISO_8859_4_INIT.html  static.ISO_8859_5.html  static.ISO_8859_5_INIT.html  static.ISO_8859_6.html  static.ISO_8859_6_INIT.html  static.ISO_8859_7.html  (+48 more)
error_chain/: all.html  index.html  macro.bail.html  macro.ensure.html  macro.error_chain.html  macro.quick_main.html  macro.stringify_internal.html  macro.write_internal.html  sidebar-items.js  struct.DisplayChain.html  struct.Iter.html  trait.ChainedError.html  trait.ExitCode.html  type.Backtrace.html
examples/: async_tracing.rs
flate2/: enum.FlushCompress.html  enum.FlushDecompress.html  enum.Status.html  struct.CompressError.html  struct.CrcReader.html  struct.CrcWriter.html  struct.DecompressError.html
foreign_types/: all.html  index.html  macro.foreign_type.html  struct.Opaque.html
foreign_types_shared/: all.html  struct.Opaque.html
form_urlencoded/: all.html  fn.byte_serialize.html  fn.parse.html  index.html  struct.ByteSerialize.html  struct.Parse.html  trait.Target.html  (+3 more)
tracing-distributed/: Cargo.toml  README.md  README.tpl
tracing-distributed/src/: lib.rs  telemetry.rs  telemetry_layer.rs  trace.rs
tracing-honeycomb/: Cargo.toml  README.md  README.tpl
tracing-honeycomb/examples/: async_tracing.rs
tracing-honeycomb/src/: deterministic_sampler.rs  honeycomb.rs  lib.rs  span_id.rs  telemetry.rs  trace_id.rs  visitor.rs
tracing-jaeger/: Cargo.toml  README.md  README.tpl
tracing-jaeger/examples/: async_tracing.rs
tracing-jaeger/src/: lib.rs  opentelemetry.rs  visitor.rs
(+10877 files in other folders)
