[package]
name = "honeycomb-tracing"
version = "0.0.1"
authors = ["pk <pkinsky@gmail.com>"]
edition = "2018"

[dependencies]
tracing = "0.1.9"
tracing-core = "0.1.7"
tracing-futures = {version = "0.1.0", features = ["futures-preview", "tokio-alpha"]}
tracing-subscriber = "0.1"
tracing-attributes = "0.1.4"

chashmap = "2.2"

libhoney-rust = "0.1.3"
chrono = "0.4.9" # provides exact honeycomb.io timestamp format
rand = "0.7" # for generating random tracing id's if none are provided
