[package]
name = "honeycomb-tracing"
version = "0.0.1"
authors = ["pk <pkinsky@gmail.com>"]
edition = "2018"
description = "provides a tracing subscriber that publishes spans and events to honeycomb.io"
documentation = "https://pkinsky.github.io/honeycomb-tracing/honeycomb_tracing/"
repository = "https://github.com/pkinsky/honeycomb-tracing"
keywords = ["tracing", "honeycomb", "instrumentation"]
license = "MIT"
readme = "README.md"

[dependencies]
tracing = "0.1.9"
tracing-core = "0.1.7"
tracing-subscriber = "0.1"

libhoney-rust = "0.1.3"
chrono = "0.4.9" # provides exact honeycomb.io timestamp format
rand = "0.7" # for generating random tracing ids if none are provided
sharded-slab = "0.0.5"

[dev-dependencies]
tracing-attributes = "0.1.4"
futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }
tokio = "0.2.0-alpha.6"
tracing-futures = {version = "0.1.0", features = ["futures-preview", "tokio-alpha"]}
aovec = "1.1.0"
lazy_static = "1.4.0"