[package]
name = "honeycomb-tracing"
version = "0.0.2"
authors = ["pk <inanna@recursion.wtf>"]
edition = "2018"
description = "please use https://crates.io/crates/tracing-honeycomb instead"
homepage = "https://github.com/inanna-malick/tracing-honeycomb"
repository = "https://github.com/inanna-malick/tracing-honeycomb"
keywords = ["tracing", "honeycomb"]
license = "MIT"
readme = "README.md"

[dependencies]
