[package]
name = "tracing-distributed"
version = "0.1.0-alpha"
authors = ["Inanna Malick <inanna@recursion.wtf>"]
edition = "2018"
description = "Tracing layer for multiprocess telemetry"
documentation = "https://inanna-malick.github.io/honeycomb-tracing/tracing_distributed/"
repository = "https://github.com/inanna-malick/honeycomb-tracing"
keywords = ["tracing", "instrumentation"]
license = "MIT"
readme = "README.md"

[dependencies]
tracing = "0.1.12"
tracing-core = "0.1.9"
tracing-subscriber = "0.2.0"
chrono = "0.4.9"
itertools = "0.8.1"

[dev-dependencies]
tracing-attributes = "0.1.5"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
tokio = { version = "0.2", features = ["full"] }
tracing-futures = "0.2.1"