[package]
name = "tracing-distributed"
version = "0.2.0"
authors = ["Inanna Malick <inanna@recursion.wtf>"]
edition = "2018"
description = "Tracing layer for multiprocess telemetry"
documentation = "https://inanna-malick.github.io/honeycomb-tracing/tracing_distributed/"
repository = "https://github.com/inanna-malick/honeycomb-tracing"
keywords = ["tracing", "instrumentation"]
license = "MIT"
readme = "README.md"

[features]
use_parking_lot = ["parking_lot"]

[dependencies]
tracing = "0.1.12"
tracing-core = "0.1.9"
tracing-subscriber = "0.2.0"
itertools = "0.9"
parking_lot = { version = "0.11.1", optional = true }

[dev-dependencies]
tracing-attributes = "0.1.5"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
tokio = { version = "0.2", features = ["full"] }
tracing-futures = "0.2.1"
