[package]
name = "tracing-honeycomb"
version = "0.1.0-alpha-1"
authors = ["Inanna Malick <inanna@recursion.wtf>"]
edition = "2018"
description = "Honeycomb.io tracing layer for multiprocess telemetry"
documentation = "https://inanna-malick.github.io/honeycomb-tracing/tracing_honeycomb/"
repository = "https://github.com/inanna-malick/honeycomb-tracing"
keywords = ["tracing", "honeycomb", "instrumentation"]
license = "MIT"
readme = "README.md"

[dependencies]
tracing = "0.1.12"
tracing-core = "0.1.9"
tracing-distributed =  { path = "../tracing-distributed" , version = "0.1.0-alpha-1"}
libhoney-rust = "0.1.3"
rand = "0.7"

[dev-dependencies]
tracing-attributes = "0.1.5"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
tracing-subscriber = "0.2.0"
tokio = { version = "0.2", features = ["full"] }
tracing-futures = "0.2.1"
proptest = "0.9.5"