[package]
name = "tracing-jaeger"
version = "0.1.0"
authors = ["Inanna Malick <inanna@recursion.wtf>"]
edition = "2018"
description = "open telemetry tracing layer for multiprocess telemetry"
documentation = "https://inanna-malick.github.io/tracing-honeycomb/tracing_opentelemetry/"
repository = "https://github.com/inanna-malick/tracing-honeycomb"
keywords = ["tracing", "opentelemetry", "instrumentation"]
license = "MIT"
readme = "README.md"

[dependencies]
tracing = "0.1.12"
tracing-core = "0.1.9"
tracing-distributed =  { path = "../tracing-distributed" , version = "0.2.0"}
opentelemetry = {path = "../../opentelemetry-rust", version = "0.4.0" }
rand = "0.7"


[dev-dependencies]
tracing-attributes = "0.1.5"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
tracing-subscriber = "0.2.0"
tokio = { version = "0.2", features = ["full"] }
tracing-futures = "0.2.1"
opentelemetry-jaeger = {path = "../../opentelemetry-rust/opentelemetry-jaeger", version = "0.3.0" }
rand = "0.7"
